Fixed some layout issues

--- a/src/components/Radio/Radio.module.scss
+++ b/src/components/Radio/Radio.module.scss
@@ -8,7 +8,9 @@
 
   input {
     max-width: 0px;
-    max-height: 0px;
+    max-height: 0px;width: 0;
+    height: 0;
+    opacity: 0;
   }
 
   > span:first-child {
